email subscribe announce
Former-commit-id: 3ffb9b7553ce689d92fb46bd7c12ceb6b3e570ed

--- a/_includes/themes/restart/page-jobad-list.html
+++ b/_includes/themes/restart/page-jobad-list.html
@@ -2,6 +2,12 @@
 
 <section class="hgroup">
   <div class="container" id="id-main-container">
+    <div id="alert-placeholder-id-top">
+      <div class="alert alert-info alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      Get new remote jobs straight in your inbox! Press [Email Updates] below.
+      </div>
+    </div>
     <div id="alert-placeholder-id"></div>
     <div class="row">
       <div class="col-md-10 col-xs-12">
