Layout of "View original job description/Apply" changed; handlebars template compilation

--- a/_includes/themes/restart/jobdetails.handlebars
+++ b/_includes/themes/restart/jobdetails.handlebars
@@ -12,35 +12,43 @@
                 <div class="row footer-row">
 
                     <div class="col-xs-12 col-sm-12 col-md-12">
-                        <div style="padding-left: 0;" class="col-xs-4">
-                            <a href="{{{url}}}">View original job desription <i class="fa fa-external-link"
-                                                                                aria-hidden="true"></i></a>
-                        </div>
-                        <div style="padding-right: 0;" class="col-xs-8 text-right">
-                            <a href="#{{{id}}}">Get shareable link <i class="fa fa-link" aria-hidden="true"></i></a>
-                            &nbsp;
-                            <div class="btn-group div-report-btn abuse-btn" style="display: none">
-                                <button class="btn btn-default dropdown-toggle fa fa-flag-o" type="button"
-                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <span class="report-btn-font-body">Report this job...</span>
-                                    <span class="caret"></span>
-                                </button>
+                        <a href="{{{url}}}" target="_blank" rel="nofollow noopener"
+                           class="btn btn-primary" style="margin-top: 0px; margin-bottom: 4px;">
+                            <i class="fa fa-external-link" aria-hidden="true"></i>
+                            View original job description / <strong>Apply</strong>
+                        </a>
 
-                                <ul class="dropdown-menu dropdown-menu-right">
-                                    <li>
-                                        <a href="javascript:void(0)" data-toggle="modal"
-                                           data-target=".reportthisjob-modal"
-                                           data-postid="{{{id}}}"
-                                           data-tagcurrent="{{{tagCurrent}}}"
-                                           data-title="{{{title}}}">I think this job is not remote</a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:void(0)">I think this job belongs into different
-                                            category</a>
-                                    </li>
-                                </ul>
-                            </div>
+                        <!-- &nbsp; -->
+                        <div class="btn-group" style="display: none; margin-top: 0px; margin-left: 0px;
+                        margin-right: 0px; margin-bottom: 4px;" >
+                            <button class="btn btn-default dropdown-toggle" type="button"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <span ><i class="fa fa-flag-o" aria-hidden="true"></i>
+                                Report this job...</span>
+                                <span class="caret"></span>
+                            </button>
+
+                            <ul class="dropdown-menu dropdown-menu-right">
+                                <li>
+                                    <a href="javascript:void(0)" data-toggle="modal"
+                                       data-target=".reportthisjob-modal"
+                                       data-postid="{{{id}}}"
+                                       data-tagcurrent="{{{tagCurrent}}}"
+                                       data-title="{{{title}}}">I think this job is not remote</a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0)">I think this job belongs into different
+                                        category</a>
+                                </li>
+                            </ul>
                         </div>
+
+                        &nbsp;
+                        <a href="#{{{id}}}" class="btn btn-default" style="margin-top: 0px; margin-bottom: 4px;">
+                            <i class="fa fa-link" aria-hidden="true"></i>
+                            Get shareable link
+                        </a>
+
                     </div>
                     <span class="detailFooter">&nbsp;</span>
 
