application/ld+json on main page

--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -52,6 +52,31 @@
 <meta property="og:image" content="{{ site.site_og_wide_image }}">
 <meta property="og:image:width" content="1974">
 <meta property="og:image:height" content="1034">
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Organization",
+  "name": "Remote4me",
+  "url": "https://remote4me.com/",
+  "logo": "https://remote4me.com/assets/img/logo-export-2rows-271-112-white.png",
+  "naics": "5613",
+  "sameAs": [
+    "https://www.facebook.com/remote4me/",
+    "https://twitter.com/remote4me",
+    "https://www.linkedin.com/company/remote4me/",
+    "https://www.indiehackers.com/remote4me/",
+    "https://github.com/remote4me"
+  ]
+}
+</script>
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "WebSite",
+  "name": "Remote4me",
+  "url": "https://remote4me.com/"
+}
+</script>
 {% else %}
 <meta property="og:type" content="article"/>
 <meta name="twitter:card" content="summary">
