--- a/_includes/themes/restart/assets/style.css
+++ b/_includes/themes/restart/assets/style.css
@@ -458,27 +458,35 @@ h6 .small,
 }
 h1,
 .h1 {
-  font-size: 36px;
+  /* font-size: 36px; */
+  font-size: 30px;
 }
 h2,
 .h2 {
-  font-size: 30px;
+  /* font-size: 30px; */
+  font-size: 24px;
+  font-weight: 300;
 }
 h3,
 .h3 {
-  font-size: 24px;
+  /*font-size: 24px;*/
+  font-size: 18px;
 }
 h4,
 .h4 {
-  font-size: 18px;
+  /*font-size: 18px;*/
+  font-size: 14px;
+  font-weight: bolder;
 }
 h5,
 .h5 {
+  /*font-size: 14px;*/
   font-size: 14px;
+  font-weight: bold;
 }
 h6,
 .h6 {
-  font-size: 12px;
+  font-size: 14px;
 }
 p {
   margin: 0 0 10px;
@@ -5916,7 +5924,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: normal;
+  /*font-weight: normal;*/
 }
 a:hover,
 a:active,
