--- a/_includes/themes/restart/assets/userstyle-joblist.css
+++ b/_includes/themes/restart/assets/userstyle-joblist.css
@@ -114,6 +114,9 @@ a.detail-icon:visited{
         padding: 9px 0px;
     }
 
+    .crawledDate {
+        padding-top: 6px;
+    }
 }
 
 @media only screen and (min-width: 481px) {
