--- a/_includes/themes/restart/page-jobad-list.html
+++ b/_includes/themes/restart/page-jobad-list.html
@@ -2,27 +2,32 @@
 
 <section class="hgroup">
   <div class="container" id="id-main-container">
+
+    <!--
     <div id="alert-placeholder-id-top">
       <div class="alert alert-info alert-dismissible" role="alert">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       Get new remote jobs straight in your inbox! Press [Email Updates] below.
       </div>
     </div>
+    -->
     <div id="alert-placeholder-id"></div>
     <div class="row">
-      <div class="col-md-10 col-xs-12">
+      <div class="col-md-9 col-xs-12">
         <h1 class="elegant">{{ thisnodes[0].title }}</h1>
         {% if thisnodes[0].undertagline %}
-        <h2>{{ thisnodes[0].undertagline }}</h2>
+        <p class="undertagline">{{ thisnodes[0].undertagline }}</p>
         {% endif %}
       </div>
-      <div class="col-md-2 col-xs-12">
+
+      <div class="col-md-3 col-xs-12">
 
           <div class="btn-group" >
-            <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button class="btn btn-info btn-lg dropdown-toggle" type="button" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
               <i class="fa fa-envelope-o"></i> Email Updates <span class="caret"></span>
             </button>
-            <ul class="dropdown-menu dropdown-menu-right">
+            <ul class="dropdown-menu">
               <li>
                 <a href="#subscribe-daily-modal-id" data-toggle="modal" data-target=".subscribe-daily-modal">Daily</a>
               </li>
@@ -31,37 +36,33 @@
               </li>
             </ul>
           </div>
+          <p class="soc-netw-span">
+            <a href="https://reddit.com/submit/?text={{ 'Write a few sentences...' | escape }}&url={{ site.production_url | escape }}{{ page.permalink | escape }}&title={{ thisnodes[0].title | escape }}"  target="_blank" aria-label="Share on Reddit"
+               data-placement="top" data-trigger="hover focus" data-toggle="popover" data-content="Post on Reddit"
+            >
+              <i class="fa fa-border fa-reddit"></i>
+            </a>
+            &#32;
+            <a href="https://twitter.com/intent/tweet/?text={% if page.title %}{{ page.title }}{% else %}{{ thisnodes[0].title }}{% endif %}&url={{ site.production_url | escape }}{{ page.permalink | escape }}" target="_blank" aria-label="Share on Twitter"
+               data-placement="top" data-trigger="hover focus" data-toggle="popover" data-content="Tweet"
+            >
+              <i class="fa fa-border fa-twitter"></i>
+            </a>
+            &#32;
+            <a href="https://facebook.com/sharer/sharer.php?display=popup&u={{ site.production_url | escape }}{{ page.permalink | escape }}" target="_blank" aria-label="Share on Facebook"
+               data-placement="top" data-trigger="hover focus" data-toggle="popover" data-content="Post on Facebook"
+            >
+              <i class="fa fa-border fa-facebook-f"></i>
+            </a>
+            &#32;
+            <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.production_url | escape }}{{ page.permalink | escape }}&title={{ thisnodes[0].title }}&summary={{ 'Say something about it...' | escape }}" target="_blank" aria-label="Share on Linkedin"
+               data-placement="top" data-trigger="hover focus" data-toggle="popover" data-content="Post on Linkedin"
+            >
+              <i class="fa fa-border fa-linkedin"></i>
+            </a>
+          </p><!--soc-netw-span-->
 
-        <span class="soc-netw-span">
-          &#32;
-          Post,&nbsp;tweet,&nbsp;share:
-          &#32;
-          <a href="https://reddit.com/submit/?text={{ 'Write a few sentences...' | escape }}&url={{ site.production_url | escape }}{{ page.permalink | escape }}&title={{ thisnodes[0].title | escape }}"  target="_blank" aria-label="Share on Reddit"
-             data-placement="top" data-trigger="hover focus" data-toggle="popover" data-content="Post on Reddit"
-          >
-            <i class="fa fa-border fa-reddit"></i>
-          </a>
-          &#32;
-          <a href="https://twitter.com/intent/tweet/?text={% if page.title %}{{ page.title }}{% else %}{{ thisnodes[0].title }}{% endif %}&url={{ site.production_url | escape }}{{ page.permalink | escape }}" target="_blank" aria-label="Share on Twitter"
-             data-placement="top" data-trigger="hover focus" data-toggle="popover" data-content="Tweet"
-          >
-            <i class="fa fa-border fa-twitter"></i>
-          </a>
-          &#32;
-          <a href="https://facebook.com/sharer/sharer.php?display=popup&u={{ site.production_url | escape }}{{ page.permalink | escape }}" target="_blank" aria-label="Share on Facebook"
-             data-placement="top" data-trigger="hover focus" data-toggle="popover" data-content="Post on Facebook"
-          >
-            <i class="fa fa-border fa-facebook-f"></i>
-          </a>
-          &#32;
-          <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.production_url | escape }}{{ page.permalink | escape }}&title={{ thisnodes[0].title }}&summary={{ 'Say something about it...' | escape }}" target="_blank" aria-label="Share on Linkedin"
-             data-placement="top" data-trigger="hover focus" data-toggle="popover" data-content="Post on Linkedin"
-          >
-            <i class="fa fa-border fa-linkedin"></i>
-          </a>
-        </span><!--col-->
-
-      </div><!--col-->
+      </div><!--"col-md-3 col-xs-12"-->
     </div><!--row-->
 
       <ul class="breadcrumb pull-right">
