--- a/_includes/community/node1_in_list.html
+++ b/_includes/community/node1_in_list.html
@@ -6,6 +6,31 @@ Arguments:
 {% endcomment %}
 
 <a id="x" href="{{ include.node.url }}">
-    <h2 style="padding-top: 16px;" class="section_header elegant">{{ include.node.title }}</h2>
+    <h2 style="padding-top: 16px; padding-bottom: 0px; margin-bottom: 1em;"  class="section_header elegant">
+
+        <div class="row" style="position: relative;">
+            <div class="col-xs-1 col-md-2 col-lg-2"
+                 style="vertical-align: top; float: none; display: inline-block;
+                 padding-left: 0; padding-right:0;">
+                <img type="image/svg+xml" src="{{ include.node.img }}"
+                     style="width: 3.5em;">
+            </div>
+            <div class="col-xs-11 col-md-10 col-lg-10"
+                 style="position: absolute; bottom: 0; right: 0;">
+                    {{ include.node.title }}
+            </div>
+        </div>
+    </h2>
+
+
+        <!--
+        <object style="color: #428bca; max-height: 30px;" type="image/svg+xml" data="{{ include.node.img }}">
+        </object>
+        -->
+        <!--
+        <svg style="max-height: 40px; max-width: 80px;" xmlns="http://www.w3.org/2000/svg"
+             xml:space="preserve"
+             version="1.1" viewBox="0 0 8.8625887 3.3536789"><g stroke-linejoin="round" transform="matrix(.26458 0 0 .26458 -18.135 -14.655)" stroke="#4f8acc" stroke-linecap="round" stroke-width=".2401" fill="none"><path d="m101.45 66.504c-0.4926 0.8875-1.4278 1.4383-2.4429 1.4383-1.5426 0-2.7935-1.251-2.7935-2.7936s1.2509-2.7935 2.7935-2.7935 2.7936 1.2509 2.7936 2.7935"></path><path d="m96.215 65.149h5.5871"></path><path d="m86.508 67.942v-5.463"></path><path d="m86.508 64.622c0-1.1383 0.9314-2.0698 2.0701-2.0698"></path><path d="m88.578 62.553h0.0003"></path><path d="m88.578 62.553c1.1387 0 2.0701 0.9315 2.0701 2.0698"></path><path d="m90.648 64.622v3.32"></path><path d="m90.648 64.622c0-1.1383 0.9315-2.0698 2.0702-2.0698"></path><path d="m92.718 62.553h0.0003"></path><path d="m92.719 62.553c1.1386 0 2.0701 0.9315 2.0701 2.0698"></path><path d="m94.789 64.622v3.32"></path><path d="m74.034 57.411c0.0977-0.5584 0.1034-1.5154 0.6573-1.7651 0.2852-0.1284 1.4414-0.1386 1.8009-0.1375 0.3594-0.0011 1.5156 0.0091 1.8008 0.1375 0.5539 0.2497 0.5596 1.2067 0.6574 1.7651"></path><path d="m78.489 57.411-0.107-0.449"></path><path d="m78.382 56.962c-0.106-0.426-0.1882-0.6057-0.6718-0.5451-0.3813 0.0479-0.7549 0.0907-1.2033 0.091-0.4485-0.0003-0.8218-0.0431-1.2033-0.091-0.4833-0.0606-0.5655 0.1191-0.6718 0.5451"></path><path d="m74.632 56.962-0.1375 0.4499"></path><path d="m72.424 57.412v-0.352"></path><path d="m72.424 57.06c0-0.1933-0.1579-0.3515-0.3512-0.3515"></path><path d="m72.073 56.709h-0.818"></path><path d="m71.255 56.709c-0.1934 0-0.3513 0.1582-0.3513 0.3515"></path><path d="m70.903 57.06v0.3515"></path><path d="m80.559 57.412v-0.352"></path><path d="m80.559 57.06c0-0.1933 0.1579-0.3515 0.3512-0.3515"></path><path d="m80.91 56.709h0.8184"></path><path d="m81.729 56.709c0.1933 0 0.3512 0.1582 0.3512 0.3515"></path><path d="m82.08 57.06v0.3515"></path><path d="m70.602 62.008 3.4614-1.4471"></path><path d="m74.064 60.56c-0.415-0.597-3.0059-0.648-3.4614 1.4471"></path><path d="m77.242 63.636-2.672-2.828"></path><path d="m74.57 60.808c0.6446-0.3911 3.1215 0.65 2.6722 2.8276"></path><path d="m74.598 60.864c0.248-1.9029-1.7504-2.3289-2.5721-1.6764"></path><path d="m72.026 59.187 2.5721 1.6764"></path><path d="m74.573 60.789 2.7867-0.688"></path><path d="m77.36 60.101c-0.3379-0.5522-2.2374-0.9247-2.7867 0.688"></path><path d="m73.319 67.942c-1.082-2.375-0.837-5.67 0.818-7.379"></path><path d="m75.781 67.846c-2.74-1.941-2.334-5.692-1.183-6.983"></path><path d="m75.781 67.846c0.1911 0.1284 0.4272 0.1284 0.6182 0"></path><path d="m76.399 67.846 0.3209-0.2154"></path><path d="m76.72 67.631c0.1908-0.1282 0.4272-0.1282 0.6183 0"></path><path d="m77.338 67.631 0.3203 0.2154"></path><path d="m77.659 67.846c0.191 0.1284 0.4274 0.1284 0.6185 0"></path><path d="m78.277 67.846 0.3206-0.2154"></path><path d="m78.598 67.631c0.191-0.1282 0.4275-0.1282 0.6182 0"></path><path d="m79.216 67.631 0.3206 0.2154"></path><path d="m79.537 67.846c0.0956 0.0641 0.2024 0.0961 0.3093 0.0961"></path><path d="m79.846 67.942c0.1068 0 0.2137-0.032 0.309-0.0961"></path><path d="m80.155 67.846 0.3208-0.2154"></path><path d="m80.476 67.631c0.1908-0.1282 0.4275-0.1282 0.6183 0"></path><path d="m81.094 67.631 0.3206 0.2154"></path><path d="m81.415 67.846c0.1907 0.1281 0.4274 0.1281 0.6182 0"></path><path d="m82.033 67.846 0.3209-0.2154"></path><path d="m82.354 67.631c0.1908-0.1282 0.4275-0.1282 0.6182 0"></path><path d="m82.972 67.631 0.3206 0.2154"></path><path d="m83.292 67.846c0.0953 0.0641 0.2021 0.0961 0.3093 0.0961"></path><path d="m73.319 67.942h-4.031"></path><path d="m69.288 67.942c-0.3432 0-0.6267-0.2818-0.6267-0.6268"></path><path d="m68.662 67.316v-9.278"></path><path d="m68.662 58.038c0-0.3449 0.2818-0.6267 0.6267-0.6267"></path><path d="m69.288 57.411h12.792"></path><path d="m84.322 67.223c0 0.3951-0.3237 0.7197-0.7197 0.7197"></path><path d="m85.38 65.132h-7.2063l6.1481-7.6501v9.7413"></path><path d="m100.36 60.303h1.5563"></path><path d="m89.107 60.303h1.5565"></path><path d="m97.678 57.435h2.0455"></path><path d="m98.701 57.435v2.8678"></path><path d="m100.36 57.435h1.5563"></path><path d="m100.36 57.435v2.8678"></path><path d="m89.107 57.435h1.5565"></path><path d="m89.107 57.435v2.8678"></path><path d="m89.107 58.851h1.3757"></path><path d="m86.508 57.435v2.8678"></path><path d="m86.508 57.435h0.8515"></path><path d="m87.359 57.435c0.4218 0 0.7665 0.3447 0.7665 0.7665"></path><path d="m88.126 58.201v0.0006"></path><path d="m88.126 58.202c0 0.4218-0.3447 0.7665-0.7665 0.7665"></path><path d="m87.359 58.968h-0.851v-1.533"></path><path d="m88.275 60.303c-0.4709 0 0.2806-1.3342-1.0695-1.3342"></path><path d="m96.077 60.325c0.7611 0 1.3818-0.6548 1.3818-1.4573s-0.6207-1.457-1.3818-1.457-1.3819 0.6545-1.3819 1.457 0.6208 1.4573 1.3819 1.4573z"></path><path d="m100.36 58.851h1.3754"></path><path d="m91.448 60.303v-2.8678l1.1854 1.5818 1.1858-1.6209v2.9296"></path></g></svg>
+        -->
 </a>
 
