--- a/_includes/community/story.html
+++ b/_includes/community/story.html
@@ -1,3 +1,10 @@
+{% comment %}<!--
+Shows one story, full page
+
+this is part of
+layout: story
+-->{% endcomment %}
+
 <section class="hgroup">
   <div class="container">
     <h1 class="elegant">{{ page.title }}</h1>
