--- a/_includes/community/node2_in_list.html
+++ b/_includes/community/node2_in_list.html
@@ -1,13 +1,13 @@
 {% comment %}
 <!--
 Arguments:
-  include.node - a include.node from communitynav.yml
+  include.node - an include.node from communitynav.yml (must be level2)
 -->
 {% endcomment %}
 
 <div>
 {% if include.node.type != 'article' %}
-    <h3 style="margin-bottom: 0.3em; display: inline;"><a id="{{ include.node.url }}" href="#{{ include.node.url }}">{{
+    <h3 style="margin-bottom: 0.3em; display: inline;"><a id="{{ include.node.urlbookmark }}" href="#{{ include.node.urlbookmark }}">{{
         include.node.title
         }}</a></h3>. &nbsp;{{ include.node.tagline }}
     <br>
