--- a/_includes/community/story_in_list.html
+++ b/_includes/community/story_in_list.html
@@ -2,8 +2,7 @@
 Shows one story in list
 
 Arguments:
-  include.page - a page
-  include.n1 - node1 from communitynav.yml
+  include.page - a page (same as "story")
 -->{% endcomment %}
 
 <div style="margin-bottom: 1.25em;">
@@ -22,9 +21,4 @@ Arguments:
         </div>
     </div>
 
-    {% comment %}<!--
-    <div style="margin-bottom: 4em;">
-        {% include community/tags.html page=include.page n1=include.n1 %}
-    </div>
-    -->{% endcomment %}
 </div>
