--- a/_includes/themes/restart/jobdetails.handlebars
+++ b/_includes/themes/restart/jobdetails.handlebars
@@ -5,14 +5,12 @@
             </div>
         </div>
 
-        <table class="table table-hover" style="display: table;">
-            <tbody>
-                <tr>
+        <table class="table table-hover" style="display: table;"><tbody><tr>
 
                     <td class="detail-td">
                         <a  data-postid="{{{id}}}" onclick="footerPlusMinusClick(event);"
-                            class="detail-icon"  >
-                            <i class="fa fa-2x fa-caret-up iconStyle"></i>
+                            class="detail-icon"  style="color: #999999 !important;">
+                            <i class="fa fa-2x fa-caret-up iconStyle" ></i>
                         </a>
                     </td>
 
@@ -23,7 +21,6 @@
                             View original job description / <strong>Apply</strong>
                         </a>
 
-                        <!-- &nbsp; -->
                         <div class="btn-group" style="display: none; margin-top: 0px; margin-left: 0px;
                                 margin-right: 0px; margin-bottom: 4px;" >
                             <button class="btn btn-default dropdown-toggle" type="button"
@@ -48,17 +45,13 @@
                             </ul>
                         </div>
 
+                        &nbsp;
                         <a href="#{{{id}}}" class="btn btn-default" style="margin-top: 0px; margin-bottom: 4px;">
                             <i class="fa fa-link" aria-hidden="true"></i>
                             Get shareable link
                         </a>
                     </td>
 
-                    <td class="published">
-                    </td>
-
-                </tr>
-            </tbody>
-        </table>
+        </tr></tbody></table>
 
 
