Update page-jobad-list.html drop email subsc,

--- a/_includes/themes/restart/page-jobad-list.html
+++ b/_includes/themes/restart/page-jobad-list.html
@@ -21,47 +21,7 @@
       </div>
 
       <div class="col-md-3 col-xs-12">
-
-          <div class="btn-group" >
-            <button class="btn btn-info btn-lg dropdown-toggle" type="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-              <i class="fa fa-envelope-o"></i> Email Updates <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-              <li>
-                <a href="#subscribe-daily-modal-id" data-toggle="modal" data-target=".subscribe-daily-modal">Daily</a>
-              </li>
-              <li>
-                <a href="#subscribe-weekly-modal-id" data-toggle="modal" data-target=".subscribe-weekly-modal">Weekly</a>
-              </li>
-            </ul>
-          </div>
-          <p class="soc-netw-span">
-            <a href="https://reddit.com/submit/?text={{ 'Write a few sentences...' | escape }}&url={{ site.production_url | escape }}{{ page.permalink | escape }}&title={{ thisnodes[0].title | escape }}"  target="_blank" aria-label="Share on Reddit"
-               data-placement="top" data-trigger="hover focus" data-toggle="popover" data-content="Post on Reddit"
-            >
-              <i class="fa fa-border fa-reddit"></i>
-            </a>
-            &#32;
-            <a href="https://twitter.com/intent/tweet/?text={% if page.title %}{{ page.title }}{% else %}{{ thisnodes[0].title }}{% endif %}&url={{ site.production_url | escape }}{{ page.permalink | escape }}" target="_blank" aria-label="Share on Twitter"
-               data-placement="top" data-trigger="hover focus" data-toggle="popover" data-content="Tweet"
-            >
-              <i class="fa fa-border fa-twitter"></i>
-            </a>
-            &#32;
-            <a href="https://facebook.com/sharer/sharer.php?display=popup&u={{ site.production_url | escape }}{{ page.permalink | escape }}" target="_blank" aria-label="Share on Facebook"
-               data-placement="top" data-trigger="hover focus" data-toggle="popover" data-content="Post on Facebook"
-            >
-              <i class="fa fa-border fa-facebook-f"></i>
-            </a>
-            &#32;
-            <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ site.production_url | escape }}{{ page.permalink | escape }}&title={{ thisnodes[0].title }}&summary={{ 'Say something about it...' | escape }}" target="_blank" aria-label="Share on Linkedin"
-               data-placement="top" data-trigger="hover focus" data-toggle="popover" data-content="Post on Linkedin"
-            >
-              <i class="fa fa-border fa-linkedin"></i>
-            </a>
-          </p><!--soc-netw-span-->
-
+        &nbsp;
       </div><!--"col-md-3 col-xs-12"-->
     </div><!--row-->
 
