--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -155,7 +155,7 @@ gtag('config', 'UA-117928562-1');
           <div class="container">
             <div class="row">
               <div class="col-xs-6 col-md-6"></div>
-              <div class="text-right col-xs-6 col-md-6">© {{ site.author.name }}</div>
+              <div class="text-right col-xs-6 col-md-6"></div>
             </div>
           </div>
         </section>
